# kore-pygments-lexer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/kore_pygments_lexer/: kore_lexer.py
