[metadata]
name = kore-pygments-lexer
version = attr: kore_pygments_lexer.version.__version__
license = BSD 3-Clause License
license_files = LICENSE
author = Alexander Asp Bock
author_email = albo.developer@gmail.com
description = A pygments lexer for the kore programming language
keywords = kore, pygments, lexer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/korelang/kore-pygments-lexer
project_urls =
    Bug Tracker = https://github.com/korelang/kore-pygments-lexer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
install_requires =
    pygments
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
pygments.lexers =
    kore = kore_pygments_lexer.kore_lexer:KoreLexer

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
